Revert to emtpy default JVM options