@@ -285,8 +285,7 @@ public class Config {
             .withParser(ConfigParsers::toPositiveInteger);
 
         addBuilder.apply(JAVA_OPTIONS,
-                        "DPE JVM options (overrides " + JAVA_MEMORY + ")")
-            .withInitialValue("-XX:+UseNUMA -XX:+UseBiasedLocking");
+                        "DPE JVM options (overrides " + JAVA_MEMORY + ")");
 
         return defaultVariables;
     }
